force-app/main/default/objects/Container_Info__c/Container_Info__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_ContainerInfoOnlineHelp</customHelpPage>
    <description>Changed Label name from コンテナ(container) to CONTAINER &amp; SEAL NO, so as client can know that this is the obeject to input container &amp; seal number.

Aoki</description>
    <label>移動中コンテナ</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>CONTAINER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>