force-app/main/default/objects/Container_Info__c/fields/BookingNo__c.field-meta.xml
<CustomField>
    <fullName>BookingNo__c</fullName>
    <label>BOOKING NO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>