force-app/main/default/objects/Container_Info__c/fields/Bypass_Container_Type_Check__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Container_Type_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the change to Container Info was triggered from H BL SHIPMENT then bypass the check for number of Container Types of one H BL SHIPMENT</description>
    <label>Bypass Container Type Check</label>
    <type>Checkbox</type>
</CustomField>