force-app/main/default/objects/Container_Info__c/fields/ConsolCNTR__c.field-meta.xml
<CustomField>
    <fullName>ConsolCNTR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consol CNTR</label>
    <referenceTo>ConsolCNTR__c</referenceTo>
    <relationshipLabel>CNTR IN TRANS</relationshipLabel>
    <relationshipName>CNTR_IN_TRANS</relationshipName>
    <type>Lookup</type>
</CustomField>