force-app/main/default/objects/Container_Info__c/fields/CONTACT_OF_TALLY_SERVICE_PROVIDER__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_OF_TALLY_SERVICE_PROVIDER__c</fullName>
    <label>CONTACT OF TALLY SERVICE PROVIDER</label>
    <type>TextArea</type>
</CustomField>