force-app/main/default/objects/Container_Info__c/fields/Container_NO_Index__c.field-meta.xml
<CustomField>
    <fullName>Container_NO_Index__c</fullName>
    <externalId>true</externalId>
    <label>Container NO</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>