force-app/main/default/objects/Container_Info__c/fields/Container_Ownership_Code__c.field-meta.xml
<CustomField>
    <fullName>Container_Ownership_Code__c</fullName>
    <description>UN/EDIFACT8078</description>
    <inlineHelpText>1: Shipper supplied
2: Carrier supplied
3: Consolidator supplied
4: Deconsolidator supplied
5: Third party supplied</inlineHelpText>
    <label>Container Ownership Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipper supplied</fullName>
            </value>
            <value>
                <fullName>Carrier supplied</fullName>
                <default>true</default>
                <label>Carrier supplied</label>
            </value>
            <value>
                <fullName>Consolidator supplied</fullName>
            </value>
            <value>
                <fullName>Deconsolidator supplied</fullName>
            </value>
            <value>
                <fullName>Third party supplied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>