force-app/main/default/objects/Container_Info__c/fields/Container_Size_Code__c.field-meta.xml
<CustomField>
    <fullName>Container_Size_Code__c</fullName>
    <description>Container size code (2-digit) should indicate; 1st digit: Container length code, 2nd digit: Container h</description>
    <inlineHelpText>1st digit: Container length code Code=length [ft], 1=10&apos;,2=20&apos;,4=40&apos;,9 Others length, 2nd digit: Container height code Code=height[ft]/[in], 0=8&apos;,2=8&apos;/ 6,4=9&apos;,5=9&apos;/6,6=＞9&apos;/6,8=4&apos;/3,9=≦4&apos; others</inlineHelpText>
    <label>Container Size Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Container__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>46</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>49</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>