force-app/main/default/objects/Container_Info__c/fields/ContainerMode__c.field-meta.xml
<CustomField>
    <fullName>ContainerMode__c</fullName>
    <label>Container Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContainerMode</valueSetName>
    </valueSet>
</CustomField>