force-app/main/default/objects/Container_Info__c/fields/CustomerRequest__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequest__c</fullName>
    <label>Customer Request</label>
    <type>TextArea</type>
</CustomField>