force-app/main/default/objects/Container_Info__c/fields/GOODS__c.field-meta.xml
<CustomField>
    <fullName>GOODS__c</fullName>
    <label>DESCRIPTION OF GOODS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>