force-app/main/default/objects/Container_Info__c/fields/GROSS_WEIGHT__c.field-meta.xml
<CustomField>
    <fullName>GROSS_WEIGHT__c</fullName>
    <label>GROSS WEIGHT(KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>