force-app/main/default/objects/Container_Info__c/fields/HBL_SHIPMENT__c.field-meta.xml
<CustomField>
    <fullName>HBL_SHIPMENT__c</fullName>
    <label>H B/L SHIPMENT</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipName>Container_Info</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>