force-app/main/default/objects/Container_Info__c/fields/MEASUREMENT_CBM__c.field-meta.xml
<CustomField>
    <fullName>MEASUREMENT_CBM__c</fullName>
    <label>MEASUREMENT(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>