force-app/main/default/objects/Container_Info__c/fields/PIC_OF_TALLY_SERVICE_PROVIDER__c.field-meta.xml
<CustomField>
    <fullName>PIC_OF_TALLY_SERVICE_PROVIDER__c</fullName>
    <label>PIC OF TALLY SERVICE PROVIDER</label>
    <type>TextArea</type>
</CustomField>