force-app/main/default/objects/Container_Info__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>F/TMS CNTR (P.O.D)</relationshipLabel>
    <relationshipName>FTMSCNTRPOD</relationshipName>
    <type>Lookup</type>
</CustomField>