force-app/main/default/objects/Container_Info__c/fields/PODFormula__c.field-meta.xml
<CustomField>
    <fullName>PODFormula__c</fullName>
    <formula>HBL_SHIPMENT__r.POD__r.Name</formula>
    <label>P.O.D Formula</label>
    <type>Text</type>
</CustomField>