force-app/main/default/objects/Container_Info__c/fields/PODPrint__c.field-meta.xml
<CustomField>
    <fullName>PODPrint__c</fullName>
    <formula>IF( POD__c =&quot;&quot;,   PODFormula__c  , POD__r.Name)</formula>
    <label>P.O.D-Print</label>
    <type>Text</type>
</CustomField>