force-app/main/default/objects/Container_Info__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.L</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>F/TMS CNTR (P.O.L)</relationshipLabel>
    <relationshipName>FTMSCNTRPOL</relationshipName>
    <type>Lookup</type>
</CustomField>