force-app/main/default/objects/Container_Info__c/fields/POLFormula__c.field-meta.xml
<CustomField>
    <fullName>POLFormula__c</fullName>
    <formula>HBL_SHIPMENT__r.POL__r.Name</formula>
    <label>P.O.L Formula</label>
    <type>Text</type>
</CustomField>