force-app/main/default/objects/Container_Info__c/fields/POLPOD__c.field-meta.xml
<CustomField>
    <fullName>POLPOD__c</fullName>
    <formula>IF( 
and(POL__c =&quot;&quot;, POD__c =&quot;&quot;) , POLFormula__c&amp;&quot;-&quot;&amp;  PODFormula__c, 

IF( and(POL__c =&quot;&quot;, POD__c &lt;&gt; &quot;&quot;) , POLFormula__c&amp;&quot;-&quot;&amp;  POD__r.Name,

IF( and(POL__c &lt;&gt;&quot;&quot;, POD__c = &quot;&quot;) , POL__r.Name&amp;&quot;-&quot;&amp;  PODFormula__c,

POL__r.Name &amp;&quot;-&quot;&amp; POD__r.Name
)
)
)</formula>
    <label>P.O.L-P.OD</label>
    <type>Text</type>
</CustomField>