force-app/main/default/objects/Container_Info__c/fields/QUANTITY_PACKAGES__c.field-meta.xml
<CustomField>
    <fullName>QUANTITY_PACKAGES__c</fullName>
    <label>QUANTITY(PACKAGES)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>