force-app/main/default/objects/Container_Info__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>F/TMS CNTR</relationshipLabel>
    <relationshipName>FTMSCNTR</relationshipName>
    <type>Lookup</type>
</CustomField>