force-app/main/default/objects/Container_Info__c/fields/Seal_No__c.field-meta.xml
<CustomField>
    <fullName>Seal_No__c</fullName>
    <label>SEAL NUMBER</label>
    <length>20</length>
    <type>Text</type>
</CustomField>