force-app/main/default/objects/Container_Info__c/fields/TALLY_REPORT__c.field-meta.xml
<CustomField>
    <fullName>TALLY_REPORT__c</fullName>
    <label>TALLY REPORT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>