force-app/main/default/objects/Container_Info__c/fields/TALLY_SERVICE_REQUIRED__c.field-meta.xml
<CustomField>
    <fullName>TALLY_SERVICE_REQUIRED__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when Tally Service required</inlineHelpText>
    <label>TALLY SERVICE REQUIRED</label>
    <type>Checkbox</type>
</CustomField>