force-app/main/default/objects/Container_Info__c/fields/Unload__c.field-meta.xml
<CustomField>
    <fullName>Unload__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unload</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LoadingLocation__c.HandlingType__c</field>
            <operation>equals</operation>
            <value>Unload</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>LoadingLocation__c</referenceTo>
    <relationshipLabel>CONTAINER (UNLOAD)</relationshipLabel>
    <relationshipName>FTSMCNTRUnload</relationshipName>
    <type>Lookup</type>
</CustomField>