force-app/main/default/objects/Container_Info__c/fields/Verified_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Verified_Gross_Weight__c</fullName>
    <inlineHelpText>Use for Verified Gross Mass of container on international transport (VGM)</inlineHelpText>
    <label>Verified Gross Weight (KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>