force-app/main/default/objects/Container_Info__c/fields/VesselVoyageNo__c.field-meta.xml
<CustomField>
    <fullName>VesselVoyageNo__c</fullName>
    <label>VESSEL VOYAGE NO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>