force-app/main/default/objects/Container_Info__c/fields/WeighCompany__c.field-meta.xml
<CustomField>
    <fullName>WeighCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WEIGHING COMPANY</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FMS CNTR (WEIGHING COMPANY)</relationshipLabel>
    <relationshipName>FMSCNTRWeighingCompany</relationshipName>
    <type>Lookup</type>
</CustomField>