force-app/main/default/objects/Container_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HBL_SHIPMENT__c</columns>
    <columns>Container_NO__c</columns>
    <columns>Seal_No__c</columns>
    <columns>QUANTITY_PACKAGES__c</columns>
    <columns>MEASUREMENT_CBM__c</columns>
    <columns>NET_WEIGHT__c</columns>
    <columns>GROSS_WEIGHT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>