force-app/main/default/objects/Container_Info__c/listViews/Container_Search_Ref.listView-meta.xml
<ListView>
    <fullName>Container_Search_Ref</fullName>
    <columns>HBL_SHIPMENT__c</columns>
    <columns>NAME</columns>
    <columns>Container__c</columns>
    <columns>Container_NO__c</columns>
    <columns>Seal_No__c</columns>
    <columns>QUANTITY_PACKAGES__c</columns>
    <columns>MEASUREMENT_CBM__c</columns>
    <columns>Empty_Full_Container_Identification__c</columns>
    <columns>NET_WEIGHT__c</columns>
    <columns>GOODS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Container__c</field>
        <operation>equals</operation>
        <value>20&apos;REF,40&apos;REF</value>
    </filters>
    <label>Container Search-Ref</label>
    <language>en_US</language>
</ListView>