force-app/main/default/objects/Container_Info__c/listViews/Massive_Update_FORWARDING_ID.listView-meta.xml
<ListView>
    <fullName>Massive_Update_FORWARDING_ID</fullName>
    <columns>HBL_SHIPMENT__c</columns>
    <columns>NAME</columns>
    <columns>Container_NO__c</columns>
    <columns>Seal_No__c</columns>
    <columns>QUANTITY_PACKAGES__c</columns>
    <columns>MEASUREMENT_CBM__c</columns>
    <columns>GROSS_WEIGHT__c</columns>
    <columns>NET_WEIGHT__c</columns>
    <columns>GOODS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HBL_SHIPMENT__c</field>
        <operation>equals</operation>
        <value>010742</value>
    </filters>
    <label>Massive Update-FORWARDING ID</label>
    <language>en_US</language>
</ListView>